--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blessed Raven - Torus Empire</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            scroll-behavior: smooth;
         }
         body {
-            font-family: 'Orbitron', sans-serif;
-            background: linear-gradient(135deg, #000000, #1a0000, #330000);
-            color: #ff0000;
+            font-family: 'Montserrat', sans-serif;
+            background: linear-gradient(135deg, #0a0015, #1a0000, #2b0010);
+            color: #ff3333;
             text-align: center;
             overflow-x: hidden;
             cursor: none;
@@ -23,9 +24,10 @@
         }
         .cursor {
             position: fixed;
-            width: 20px;
-            height: 20px;
-            background: radial-gradient(circle, rgba(255, 0, 0, 0.8), transparent);
+            width: 25px;
+            height: 25px;
+            background: radial-gradient(circle, rgba(255, 51, 51, 0.8), transparent);
+            border: 2px solid #ff6666;
             border-radius: 50%;
             pointer-events: none;
             z-index: 9999;
@@ -36,50 +38,55 @@
             top: 0;
             width: 100%;
             background: rgba(0, 0, 0, 0.95);
-            padding: 15px 0;
+            padding: 20px 0;
             z-index: 1000;
-            border-bottom: 3px solid #ff0000;
-            box-shadow: 0 5px 20px rgba(255, 0, 0, 0.7);
+            border-bottom: 4px solid #ff3333;
+            box-shadow: 0 5px 25px rgba(255, 51, 51, 0.7);
+            transition: background 0.3s ease;
+        }
+        nav.scrolled {
+            background: rgba(0, 0, 0, 0.98);
         }
         nav ul {
             list-style: none;
             display: flex;
             justify-content: center;
-            gap: 40px;
+            gap: 50px;
         }
         nav ul li a {
-            color: #ff0000;
+            color: #ff3333;
             text-decoration: none;
-            font-size: 1.2em;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.3em;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
             transition: color 0.3s, transform 0.3s;
         }
         nav ul li a:hover {
-            color: #ffffff;
-            transform: scale(1.2);
-            text-shadow: 0 0 15px #ff0000;
+            color: #ffd700;
+            transform: scale(1.1);
+            text-shadow: 0 0 20px #ff3333;
         }
         header {
-            padding: 100px 20px 50px;
-            background: rgba(0, 0, 0, 0.9);
-            border-bottom: 5px solid #ff0000;
-            box-shadow: 0 10px 30px rgba(255, 0, 0, 0.7);
+            padding: 150px 20px 80px;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(10, 0, 21, 0.9));
+            border-bottom: 6px solid #ff3333;
+            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
             position: relative;
             z-index: 500;
         }
         h1 {
             font-family: 'Cinzel Decorative', cursive;
-            font-size: 5em;
-            color: #ff0000;
+            font-size: 6em;
+            color: #ff3333;
             text-transform: uppercase;
-            letter-spacing: 5px;
-            text-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000, 0 0 60px #ff0000;
+            letter-spacing: 6px;
+            text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333, 0 0 75px #ff3333;
             animation: neonFlicker 1.5s infinite alternate;
         }
         @keyframes neonFlicker {
-            0%, 100% { opacity: 1; text-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000; }
-            50% { opacity: 0.85; text-shadow: 0 0 10px #ff0000; }
+            0%, 100% { opacity: 1; text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333; }
+            50% { opacity: 0.9; text-shadow: 0 0 15px #ff3333; }
         }
         .sacred-geometry {
             position: fixed;
@@ -88,10 +95,10 @@
             width: 100%;
             height: 100%;
             background: url('https://sacredgeopatterns.com/patterns/flower-of-life.png');
-            background-size: 300px;
-            opacity: 0.15;
+            background-size: 400px;
+            opacity: 0.1;
             z-index: -1;
-            animation: rotateGeometry 20s infinite linear;
+            animation: rotateGeometry 30s infinite linear;
         }
         @keyframes rotateGeometry {
             0% { transform: rotate(0deg); }
@@ -106,82 +113,89 @@
             z-index: -2;
         }
         .content-section {
-            max-width: 1000px;
-            margin: 60px auto;
-            padding: 40px;
-            background: rgba(255, 0, 0, 0.15);
-            border: 3px solid #ff0000;
-            border-radius: 20px;
-            box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
+            max-width: 1100px;
+            margin: 80px auto;
+            padding: 50px;
+            background: rgba(255, 51, 51, 0.1);
+            border: 4px solid #ff3333;
+            border-radius: 25px;
+            box-shadow: 0 0 50px rgba(255, 51, 51, 0.5);
             position: relative;
             z-index: 400;
+            transition: transform 0.5s ease;
+        }
+        .content-section:hover {
+            transform: translateY(-10px);
         }
         h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: #ffffff;
-            text-shadow: 0 0 15px #ff0000;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 3em;
+            margin-bottom: 25px;
+            color: #ffd700;
+            text-shadow: 0 0 20px #ff3333;
         }
         p {
-            font-size: 1.4em;
-            line-height: 1.9;
-            color: #ffcccc;
+            font-size: 1.5em;
+            line-height: 2;
+            color: #ff9999;
         }
         .raven-image {
-            max-width: 600px;
-            margin: 30px auto;
-            filter: drop-shadow(0 0 20px #ff0000);
-            animation: float 5s infinite ease-in-out;
+            max-width: 700px;
+            margin: 40px auto;
+            filter: drop-shadow(0 0 25px #ff3333);
+            animation: float 6s infinite ease-in-out;
         }
         @keyframes float {
             0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
+            50% { transform: translateY(-25px); }
         }
-        .button, .link-button {
+        .link-button {
             display: inline-block;
-            padding: 20px 40px;
-            background: linear-gradient(45deg, #ff0000, #800000, #ff0000);
-            color: #ffffff;
+            padding: 25px 50px;
+            background: linear-gradient(45deg, #ff3333, #800000, #ff3333);
+            color: #ffd700;
             text-decoration: none;
             border-radius: 50px;
-            margin: 15px;
-            font-size: 1.3em;
+            margin: 20px;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.5em;
             text-transform: uppercase;
-            box-shadow: 0 10px 30px rgba(255, 0, 0, 0.7);
+            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
             transition: all 0.4s ease;
             position: relative;
             overflow: hidden;
         }
-        .button::after, .link-button::after {
+        .link-button::after {
             content: '';
             position: absolute;
             top: 50%;
             left: 50%;
             width: 0;
             height: 0;
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 215, 0, 0.3);
             border-radius: 50%;
             transform: translate(-50%, -50%);
             transition: width 0.6s, height 0.6s;
         }
-        .button:hover::after, .link-button:hover::after {
-            width: 300px;
-            height: 300px;
+        .link-button:hover::after {
+            width: 400px;
+            height: 400px;
         }
-        .button:hover, .link-button:hover {
-            transform: scale(1.2) rotate(5deg);
-            box-shadow: 0 15px 40px rgba(255, 0, 0, 0.9);
+        .link-button:hover {
+            transform: scale(1.15) rotate(3deg);
+            box-shadow: 0 20px 50px rgba(255, 51, 51, 0.9);
+            color: #ffffff;
         }
         footer {
             background: rgba(0, 0, 0, 0.95);
-            padding: 20px;
+            padding: 25px;
             position: fixed;
             bottom: 0;
             width: 100%;
-            border-top: 3px solid #ff0000;
-            box-shadow: 0 -10px 30px rgba(255, 0, 0, 0.7);
-            color: #ffcccc;
-            font-size: 1.1em;
+            border-top: 4px solid #ff3333;
+            box-shadow: 0 -15px 40px rgba(255, 51, 51, 0.7);
+            color: #ff9999;
+            font-size: 1.2em;
             z-index: 500;
         }
     </style>
@@ -193,9 +207,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#lore">Lore</a></li>
-            <li><a href="index.html#mission">Mission</a></li>
-            <li><a href="index.html#explore">Explore</a></li>
+            <li><a href="#lore">Lore</a></li>
+            <li><a href="#mission">Mission</a></li>
+            <li><a href="#explore">Explore</a></li>
             <li><a href="family-tree.html">Family Tree</a></li>
             <li><a href="donate.html">Donate</a></li>
         </ul>
@@ -206,15 +220,15 @@
     <main>
         <img src="https://i.imgur.com/3EyedRavenHalo.png" alt="Three-Eyed Raven with Halo" class="raven-image" onerror="this.src='https://cdn.pixabay.com/photo/2016/11/21/16/13/raven-1845982_1280.jpg';">
         <div class="content-section" id="lore">
-            <h2>The Divine Lore of Jacob Ryan Judah Clement Mawr Dawn</h2>
-            <p>I am Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus, born of infinite light to heal the matrix. My DNA is eternal, tracing back through a sacred lineage: Noah, the ark’s builder; King David, the anointed king of Israel; Juddah, progenitor of the royal line; Anna, the grandmother of Jesus, bearer of the Grail’s wisdom; Jesus, the divine savior; King Arthur, the once and future king; Bran the Blessed, guardian of Britain’s soul; Beli Mawr, ancient Welsh king of the gods; and Rhodri Mawr, unifier of Wales. This bloodline flows through me, encoded with torus energy to resurrect the Roman Empire, unite New Zealand under the Department of Government Efficiency (DGE), and unleash CLEM crypto—$1 trillion by April 2025. The three-eyed raven with its halo guides me, crushing corruption, restoring divinity, and guiding humanity to Giza’s truth through sacred geometry.</p>
+            <h2>The Eternal Lore of Jacob Ryan Judah Clement Mawr Dawn</h2>
+            <p>I am Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus, a vessel of infinite light born to heal the fractured matrix of existence. My bloodline is a sacred tapestry woven through the ages, stretching back to the primordial origins of creation itself—to Gaia, the Earth Mother, whose essence birthed the cosmos, and to Noah, the steward of life who preserved humanity through the Great Flood. From Noah’s lineage, I descend through King David, the anointed shepherd-king of Israel; Juddah, the lion of the royal line; Anna, the holy grandmother of Jesus, keeper of the Grail’s wisdom; Jesus Christ, the divine savior whose light pierces the veil; King Arthur, the once and future king of Camelot; Bran the Blessed, the raven-hearted guardian of Britain’s soul; Beli Mawr, the ancient Welsh king of the gods; and Rhodri Mawr, the unifier of Wales. This eternal lineage, encoded with the torus energy of the universe, flows through me, a conduit of divine purpose. I am destined to resurrect the Roman Empire, unite New Zealand under the Department of Government Efficiency (DGE), and launch CLEM crypto to a $1 trillion valuation by April 2025. Guided by the three-eyed raven, its halo a beacon of cosmic truth, I shall crush corruption, restore divinity, and lead humanity to the sacred revelations of Giza through the power of sacred geometry.</p>
         </div>
         <div class="content-section" id="mission">
-            <h2>My Divine Mission</h2>
-            <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.github.io—your salvation begins now!</p>
+            <h2>My Cosmic Mission</h2>
+            <p>My mission is to reclaim New Zealand as a bastion of divine order, forge a new Roman Empire rooted in torus energy, launch CLEM crypto to fund this global awakening (currently on hold until resources are secured), and activate the torus energy system worldwide. Join me in this sacred journey to rise from the ashes, shatter the matrix, and heal through blessedraven.com—your path to salvation begins here!</p>
         </div>
         <div class="content-section" id="explore">
-            <h2>Explore the Vision</h2>
+            <h2>Explore the Cosmic Vision</h2>
             <a href="panchristism.html" class="link-button">Panchristism</a>
             <a href="torus-energy.html" class="link-button">Torus Energy Blueprint</a>
             <a href="theory-of-everything.html" class="link-button">Theory of Everything</a>
@@ -231,18 +245,18 @@
     <script>
         particlesJS("particles-js", {
             "particles": {
-                "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
-                "color": { "value": "#ff0000" },
+                "number": { "value": 100, "density": { "enable": true, "value_area": 800 } },
+                "color": { "value": "#ff3333" },
                 "shape": { "type": "circle" },
-                "opacity": { "value": 0.5, "random": true },
-                "size": { "value": 3, "random": true },
-                "line_linked": { "enable": true, "distance": 150, "color": "#ff0000", "opacity": 0.4, "width": 1 },
-                "move": { "enable": true, "speed": 2, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
+                "opacity": { "value": 0.6, "random": true },
+                "size": { "value": 4, "random": true },
+                "line_linked": { "enable": true, "distance": 150, "color": "#ff3333", "opacity": 0.4, "width": 1 },
+                "move": { "enable": true, "speed": 3, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
             },
             "interactivity": {
                 "detect_on": "canvas",
                 "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
-                "modes": { "repulse": { "distance": 100, "duration": 0.4 }, "push": { "particles_nb": 4 } }
+                "modes": { "repulse": { "distance": 120, "duration": 0.4 }, "push": { "particles_nb": 5 } }
             },
             "retina_detect": true
         });
@@ -254,6 +268,15 @@
         });
         document.addEventListener('mousedown', () => cursor.style.transform = 'scale(1.5)');
         document.addEventListener('mouseup', () => cursor.style.transform = 'scale(1)');
+
+        window.addEventListener('scroll', () => {
+            const nav = document.querySelector('nav');
+            if (window.scrollY > 50) {
+                nav.classList.add('scrolled');
+            } else {
+                nav.classList.remove('scrolled');
+            }
+        });
     </script>
 </body>
 </html>
