--- a/astral-game.html
+++ b/astral-game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astral: The Game - Blessed Raven</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,95 +14,11 @@
         }
         body {
             font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #0a0015, #1a0000, #2b0010);
-            color: #ff3333;
-            text-align: center;
+            background: linear-gradient(180deg, #0a0015, #1a0000, #2b0010);
+            color: #ffffff;
             overflow-x: hidden;
-            cursor: none;
             min-height: 100vh;
             position: relative;
-        }
-        .cursor {
-            position: fixed;
-            width: 25px;
-            height: 25px;
-            background: radial-gradient(circle, rgba(255, 51, 51, 0.8), transparent);
-            border: 2px solid #ff6666;
-            border-radius: 50%;
-            pointer-events: none;
-            z-index: 9999;
-            transition: transform 0.1s ease;
-        }
-        nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.95);
-            padding: 20px 0;
-            z-index: 1000;
-            border-bottom: 4px solid #ff3333;
-            box-shadow: 0 5px 25px rgba(255, 51, 51, 0.7);
-            transition: background 0.3s ease;
-        }
-        nav.scrolled {
-            background: rgba(0, 0, 0, 0.98);
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            gap: 50px;
-        }
-        nav ul li a {
-            color: #ff3333;
-            text-decoration: none;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.3em;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            transition: color 0.3s, transform 0.3s;
-        }
-        nav ul li a:hover {
-            color: #ffd700;
-            transform: scale(1.1);
-            text-shadow: 0 0 20px #ff3333;
-        }
-        header {
-            padding: 150px 20px 80px;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(10, 0, 21, 0.9));
-            border-bottom: 6px solid #ff3333;
-            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
-            position: relative;
-            z-index: 500;
-        }
-        h1 {
-            font-family: 'Cinzel Decorative', cursive;
-            font-size: 6em;
-            color: #ff3333;
-            text-transform: uppercase;
-            letter-spacing: 6px;
-            text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333, 0 0 75px #ff3333;
-            animation: neonFlicker 1.5s infinite alternate;
-        }
-        @keyframes neonFlicker {
-            0%, 100% { opacity: 1; text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333; }
-            50% { opacity: 0.9; text-shadow: 0 0 15px #ff3333; }
-        }
-        .sacred-geometry {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('https://sacredgeopatterns.com/patterns/flower-of-life.png');
-            background-size: 400px;
-            opacity: 0.1;
-            z-index: -1;
-            animation: rotateGeometry 30s infinite linear;
-        }
-        @keyframes rotateGeometry {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
         }
         #particles-js {
             position: fixed;
@@ -110,53 +26,90 @@
             height: 100%;
             top: 0;
             left: 0;
-            z-index: -2;
+            z-index: -1;
+        }
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px 0;
+            z-index: 1000;
+            border-bottom: 2px solid #ff3333;
+            box-shadow: 0 5px 20px rgba(255, 51, 51, 0.5);
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+        }
+        nav ul li a {
+            color: #ffffff;
+            text-decoration: none;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.2em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            transition: color 0.3s, transform 0.3s;
+        }
+        nav ul li a:hover {
+            color: #ffd700;
+            transform: translateY(-3px);
+        }
+        header {
+            padding: 150px 20px 80px;
+            text-align: center;
+        }
+        h1 {
+            font-family: 'Cinzel Decorative', cursive;
+            font-size: 5em;
+            color: #ff3333;
+            text-shadow: 0 0 20px #ff3333, 0 0 40px #ff3333;
+            animation: fadeIn 2s ease-in-out;
+        }
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
         .content-section {
-            max-width: 1100px;
-            margin: 80px auto;
-            padding: 50px;
-            background: rgba(255, 51, 51, 0.1);
-            border: 4px solid #ff3333;
-            border-radius: 25px;
-            box-shadow: 0 0 50px rgba(255, 51, 51, 0.5);
-            position: relative;
-            z-index: 400;
-            transition: transform 0.5s ease;
-        }
-        .content-section:hover {
-            transform: translateY(-10px);
+            max-width: 1000px;
+            margin: 60px auto;
+            padding: 40px;
+            background: rgba(255, 51, 51, 0.05);
+            border: 2px solid #ff3333;
+            border-radius: 15px;
+            box-shadow: 0 0 30px rgba(255, 51, 51, 0.3);
+            animation: fadeIn 1.5s ease-in-out;
         }
         h2 {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 3em;
-            margin-bottom: 25px;
+            font-family: 'Cinzel Decorative', cursive;
+            font-size: 2.5em;
             color: #ffd700;
-            text-shadow: 0 0 20px #ff3333;
+            margin-bottom: 20px;
+            text-shadow: 0 0 10px #ffd700;
         }
         p {
-            font-size: 1.5em;
-            line-height: 2;
-            color: #ff9999;
+            font-size: 1.2em;
+            line-height: 1.8;
+            color: #ffffff;
         }
         footer {
-            background: rgba(0, 0, 0, 0.95);
-            padding: 25px;
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px;
+            text-align: center;
             position: fixed;
             bottom: 0;
             width: 100%;
-            border-top: 4px solid #ff3333;
-            box-shadow: 0 -15px 40px rgba(255, 51, 51, 0.7);
-            color: #ff9999;
-            font-size: 1.2em;
-            z-index: 500;
+            border-top: 2px solid #ff3333;
+            box-shadow: 0 -5px 20px rgba(255, 51, 51, 0.5);
+            color: #ffffff;
+            font-size: 1em;
         }
     </style>
 </head>
 <body>
     <div id="particles-js"></div>
-    <div class="sacred-geometry"></div>
-    <div class="cursor"></div>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -164,6 +117,13 @@
             <li><a href="index.html#mission">Mission</a></li>
             <li><a href="index.html#explore">Explore</a></li>
             <li><a href="family-tree.html">Family Tree</a></li>
+            <li><a href="immortality.html">Immortality</a></li>
+            <li><a href="pyramids.html">Pyramids</a></li>
+            <li><a href="astral-game.html">Astral Game</a></li>
+            <li><a href="med-beds.html">Med Beds</a></li>
+            <li><a href="panchristism.html">Panchristism</a></li>
+            <li><a href="theory-of-everything.html">Theory of Everything</a></li>
+            <li><a href="torus-energy.html">Torus Energy</a></li>
             <li><a href="donate.html">Donate</a></li>
         </ul>
     </nav>
@@ -173,9 +133,7 @@
     <main>
         <div class="content-section">
             <h2>Explore the Astral Plane</h2>
-            <p>Astral is a virtual reality (VR) game set in the near future, where players immerse themselves in the astral plane—a metaphysical realm with seven levels, inspired by esoteric traditions like neo-Platonism, Hinduism, and Kabbalah. Using a sensory deprivation tank (e.g., "Neurotank"), a brain-computer interface (BCI) called the Silver Cord/Sutratma (a waterproof EEG cap with dry foam sensors), and heart magnetic resonance monitoring (via magnetocardiography), players control their astral body (avatar) with brainwaves and heart signals.</p>
-            <p>Starting at the 4th plane, players ascend or descend through the levels based on choices, using psychic powers like telekinesis, element manipulation, and psionics. The solo campaign involves completing quests to reach the highest (7th) or lowest (1st) plane, with scenarios like learning astral projection from spiritual beings, connecting via the Neurotank, or navigating the afterlife after a fatal accident. Multiplayer mode offers an open-world experience where players interact with spirits, other-dimensional beings, and deceased loved ones, co-creating the environment with collective brainwaves and emotional states.</p>
-            <p>The game integrates with the Med Bed Sensory Deprivation Tank, enhancing immersion and providing potential DNA repair through violet light (400–450 nm). Brainwave control (e.g., beta for focus, alpha for relaxation) enables actions like moving or manipulating elements, while heart signals (via HRV) adjust the environment (e.g., calm states spawn peaceful entities). Astral explores themes of spiritual growth, unity, and the afterlife, offering a limitless potential for creativity and connection.</p>
+            <p>Astral is a virtual reality game set in the near future, where players explore the astral plane’s seven levels. Using a sensory deprivation tank, a brain-computer interface (Silver Cord/Sutratma), and heart magnetic resonance monitoring, players control their avatar with brainwaves and heart signals. Ascend or descend through the levels with psychic powers like telekinesis and element manipulation. The solo campaign involves quests to reach the highest or lowest plane, while multiplayer mode offers an open-world experience to interact with spirits and co-create environments. Integrated with the Med Bed, Astral enhances immersion and healing.</p>
         </div>
     </main>
     <footer>
@@ -186,36 +144,19 @@
         particlesJS("particles-js", {
             "particles": {
                 "number": { "value": 100, "density": { "enable": true, "value_area": 800 } },
-                "color": { "value": "#ff3333" },
+                "color": { "value": ["#ff3333", "#ffd700"] },
                 "shape": { "type": "circle" },
-                "opacity": { "value": 0.6, "random": true },
-                "size": { "value": 4, "random": true },
-                "line_linked": { "enable": true, "distance": 150, "color": "#ff3333", "opacity": 0.4, "width": 1 },
-                "move": { "enable": true, "speed": 3, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
+                "opacity": { "value": 0.5, "random": true },
+                "size": { "value": 3, "random": true },
+                "line_linked": { "enable": true, "distance": 150, "color": "#ff3333", "opacity": 0.3, "width": 1 },
+                "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false }
             },
             "interactivity": {
                 "detect_on": "canvas",
                 "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
-                "modes": { "repulse": { "distance": 120, "duration": 0.4 }, "push": { "particles_nb": 5 } }
+                "modes": { "repulse": { "distance": 100, "duration": 0.4 }, "push": { "particles_nb": 4 } }
             },
             "retina_detect": true
-        });
-
-        const cursor = document.querySelector('.cursor');
-        document.addEventListener('mousemove', e => {
-            cursor.style.left = e.clientX + 'px';
-            cursor.style.top = e.clientY + 'px';
-        });
-        document.addEventListener('mousedown', () => cursor.style.transform = 'scale(1.5)');
-        document.addEventListener('mouseup', () => cursor.style.transform = 'scale(1)');
-
-        window.addEventListener('scroll', () => {
-            const nav = document.querySelector('nav');
-            if (window.scrollY > 50) {
-                nav.classList.add('scrolled');
-            } else {
-                nav.classList.remove('scrolled');
-            }
         });
     </script>
 </body>
